syntax = "proto2";

package magnolify.test;

option java_package = "magnolify.test";

message IntegersP2 {
    required int32 i = 1;
    required int64 l = 2;
}

message FloatsP2 {
    required float f = 1;
    required double d = 2;
}

message RequiredP2 {
    required bool b = 1;
    required string s = 2;
    required int32 i = 3;
}

message NullableP2 {
    optional bool b = 1;
    optional string s = 2;
    optional int32 i = 3;
}

message RepeatedP2 {
    repeated bool b = 1;
    repeated string s = 2;
    repeated int32 i = 3;
}

message NestedP2 {
    required bool b = 1;
    required string s = 2;
    required int32 i = 3;
    required RequiredP2 r = 4;
    optional RequiredP2 o = 5;
    repeated RequiredP2 l = 6;
}

message CollectionP2 {
    repeated int32 a = 1;
    repeated int32 l = 2;
    repeated int32 v = 3;
}

message MoreCollectionP2 {
    repeated int32 i = 1;
    repeated int32 s = 2;
    repeated int32 is = 3;
}

message EnumsP2 {
    enum JavaEnums {
        RED = 0;
        GREEN = 1;
        BLUE = 2;
    }
    enum ScalaEnums {
        Red = 0;
        Green = 1;
        Blue = 2;
    }
    required JavaEnums j = 1;
    required ScalaEnums s = 2;
}

message CustomP2 {
    required string u = 1;
    required int64 d = 2;
}

message BytesP2 {
    required bytes b = 1;
}
