syntax = "proto3";

package magnolify.test;

option java_package = "magnolify.test";

message IntegersP3 {
    int32 i = 1;
    int64 l = 2;
}

message FloatsP3 {
    float f = 1;
    double d = 2;
}

message SingularP3 {
    bool b = 1;
    string s = 2;
    int32 i = 3;
}

message RepeatedP3 {
    repeated bool b = 1;
    repeated string s = 2;
    repeated int32 i = 3;
}

message NestedP3 {
    bool b = 1;
    string s = 2;
    int32 i = 3;
    SingularP3 r = 4;
    repeated SingularP3 l = 5;
}

message CollectionP3 {
    repeated int32 a = 1;
    repeated int32 l = 2;
    repeated int32 v = 3;
}

message MoreCollectionP3 {
    repeated int32 i = 1;
    repeated int32 s = 2;
    repeated int32 is = 3;
}

message EnumsP3 {
    enum JavaEnums {
        RED = 0;
        GREEN = 1;
        BLUE = 2;
    }
    enum ScalaEnums {
        Red = 0;
        Green = 1;
        Blue = 2;
    }
    JavaEnums j = 1;
    ScalaEnums s = 2;
}

message CustomP3 {
    string u = 1;
    int64 d = 2;
}

message BytesP3 {
    bytes b = 1;
}

message UpperCaseP3 {
    string FIRSTFIELD = 1;
    string SECONDFIELD = 2;
    UpperCaseInnerP3 INNERFIELD = 3;
}

message UpperCaseInnerP3 {
    string INNERFIRST = 1;
}
